; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/ocfs2/dlm/extr_dlmlock.c_dlm_get_next_cookie.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/ocfs2/dlm/extr_dlmlock.c_dlm_get_next_cookie.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@dlm_cookie_lock = common dso_local global i32 0, align 4
@dlm_next_cookie = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"This node's cookie will now wrap!\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @dlm_get_next_cookie to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dlm_get_next_cookie(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %6 = load i32, i32* %3, align 4
  store i32 %6, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  %8 = shl i32 %7, 56
  store i32 %8, i32* %5, align 4
  %9 = call i32 @spin_lock(i32* @dlm_cookie_lock)
  %10 = load i32, i32* @dlm_next_cookie, align 4
  %11 = load i32, i32* %5, align 4
  %12 = or i32 %10, %11
  %13 = load i32*, i32** %4, align 8
  store i32 %12, i32* %13, align 4
  %14 = load i32, i32* @dlm_next_cookie, align 4
  %15 = add nsw i32 %14, 1
  store i32 %15, i32* @dlm_next_cookie, align 4
  %16 = sext i32 %15 to i64
  %17 = and i64 %16, -72057594037927936
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %2
  %20 = call i32 @mlog(i32 0, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0))
  store i32 1, i32* @dlm_next_cookie, align 4
  br label %21

21:                                               ; preds = %19, %2
  %22 = call i32 @spin_unlock(i32* @dlm_cookie_lock)
  ret void
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @mlog(i32, i8*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
